Bug 1601091 - gfx.status.compositor is NULL in an unexpectedly frequent number of pings. r=chutten

* Duplicate gfx.compositor and gfx.adapter.device_id with last_seen
versions that have a 'user' lifetime to temporarily work around
telemetry null string issues.
* Fix linting warnings

Differential Revision: https://phabricator.services.mozilla.com/D57143